--- a/bistro/recipes.html
+++ b/bistro/recipes.html
@@ -1,10 +1,11 @@
-<h1>Tapenade (Olive Spread)</h1><hr>
+<h1>Tapenade (Olive Spread)</h1>
+<hr>
 
 <p>This is a really simple dish to prepare and it’s always a big hit at
-parties.</p>
-<p>My father recommends: "Make this the night before so that the flavors have time to blend. Just
-bring it up to room temperature before you serve it. In the winter, try
-serving it warm."</p>
+  parties.</p>
+<p>My father recommends: <q>Make this the night before so that the flavors have time to blend. Just
+  bring it up to room temperature before you serve it. In the winter, try
+  serving it warm.</q></p>
 
 <h2>Ingredients</h2>
 
@@ -18,9 +19,9 @@ serving it warm."</p>
 <h2>Instructions</h2>
 <ol>
   <li>Combine tomatoes and garlic in a food processor. Blend until as smooth
-  as possible.</li>
+    as possible.</li>
   <li>Add capers and olives. Pulse the motor a few times until they are
-  incorporated, but still retain some texture.</li>
+    incorporated, but still retain some texture.</li>
   <li>Serve on thin toast rounds with goat cheese and fresh basil garnish
-  (optional).</li>
+    (optional).</li>
 </ol>
